<resources>
    <string name="app_name">AustinsQuiz</string>
    <string name="action_settings">Settings</string>

    <string name="start">Start</string>
    <string name="score">Score</string>
    <string name="restart">Restart</string>

    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>

    <string name="error_no_check">An option must be selected!</string>

    <!-- title layout -->
    <string name="austins_quiz">Austin\'s Quiz</string>
    <string name="slack_me">(That\'s me on Slack!)</string>

    <!-- question 1 choices -->
    <string name="yes">Yes!</string>
    <string name="no">No.</string>
    <string name="maybe">Maybe?</string>

    <!-- question 2 choices -->
    <string name="very">Very!</string>
    <string name="a_little">A little.</string>
    <string name="never_programmed">Never programmed before.</string>

    <!-- question 3 choices -->
    <string name="a_lot">A lot!</string>
    <string name="none">None at all!</string>

    <!-- question 4 choices -->
    <string name="ezpz">It was easy!</string>
    <string name="terribly">Terribly...</string> <!-- &#8203; -->
    <string name="crybaby">He cried the whole time!</string>

    <!-- question 5 choices -->
    <string name="not">Not at all.</string>
    <string name="what_course">What course?</string>

    <!-- question 6 choices -->
    <string name="yes_noteify">Yes, it\'s Noteify by Stellar Software!</string>
    <string name="no_unheard_of">No that would be unheard of.</string>
    <string name="ofc_not">Of course not!</string>

    <!-- question 7 choices -->
    <string name="thank_you">Thank you!</string>

    <!-- question and answer data -->
    <string name="question1">Does Austin want to progress to the next Android development course?</string>
    <string name="result1">I would really like to be accepted into the next Android course. :)\n\nIt\'s my goal to learn as much about programming as I can and this course helps me with that.</string>

    <string name="question2">How comfortable is Austin with lower level programming?</string>
    <string name="result2">Everything I know has been self taught from years of interest. I\'ve been a computer nerd for as long as I can remember and every day I strive to be better at programming.</string>

    <string name="question3">How much free time does Austin have?</string>
    <string name="result3">I often don\'t have time available to check Slack or interact with the community. That doesn\'t mean I don\'t want to be here! My concern is programming every day and learning as much as I can.</string>

    <string name="question4">How difficult was this challenge for Austin?</string>
    <string name="result4">This challenge is easy. My interests primarily lie in game development but this is not unfamiliar territory. I also have experience with Visual Studio programs and scripting. Give me a real challenge!</string>

    <string name="question5">How grateful is Austin to be in this course?</string>
    <string name="result5">I am very grateful to be here. While not directly, this course has pushed me to learn inheritance, overrides, and many other concepts I was not familiar with on my own. I would like to continue to be pushed so I learn more.</string>

    <string name="question6">Has Austin already released an app on Google Play?</string>
    <string name="result6">After a while I felt the beginners course was too slow and holding me back so I worked on my own. I taught myself many concepts such as child fragments, interfaces, SQLite, and applied them to an app I use every day.</string>

    <string name="question7">Finally, Austin would like to say?</string>
    <string name="result7">I genuinely hope I move onto the next course. I am here to learn and I do not want to stop. Thank you for taking the time to teach me Android development.</string>

    <!-- gameover slide -->
    <string name="gameOverCheckBox">You can press it as much as you like.</string>
    <string name="gameOverHeader">Wow! You made it to the end.</string>
    <string name="missingCheckBox">I finished my app before seeing the grading rubric. It requires a checkbox. Uh oh!</string>
    <string name="missingEditText">It also requires I include a text entry field.</string>
    <string name="gameOverEditText">Whoops! That\'s included now too.</string>
    <string name="gameOverTextBody">I don\'t have free time available to refactor everything for a CheckBox and an EditText. \n\n You can see my Google Play app which stores EditText values in its DB and uses CheckBoxes to handle TimePicker and DatePicker dialogs. It\'s Noteify by Stellar Software! I am even willing to show you source code.\n\nThank you for reviewing my challenge app.\nPlease put me in the next course! :)</string>
</resources>
